--- a/public/index.html
+++ b/public/index.html
@@ -4,39 +4,67 @@
 	<title>Ping Pong Game</title>
 </head>
 <body>
-	<canvas id="canvas" width="800" height="400"></canvas>
+	<canvas id="canvas"></canvas>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript">
 		//Sample functions, remove these functions and design ping-pong game with onInit and onUpdate.
+		var canvas = document.getElementById("canvas");
+		var ctx = canvas.getContext("2d");
+        var canvasWidth=canvas.width;
+        var canvasHeight=canvas.height;
+
+		canvas.setAttribute('width', window.innerWidth);
+		canvas.setAttribute('height', window.innerHeight);
+		
 
 		app.onInit = function(){
+			this.width = window.innerWidth;
+			this.height = window.innerHeight;
+
 			this.nodes.push({
-				id : 'red-box',
-				x  : 100,
-				y  : 0,
-				width  : 100,
-				height : 100,
-				color  : 'red',
-				direction : 0
+				id: 'player1',
+				x: 40,
+				y: 40,
+				width : 10,
+				height: 50, 
+				color:'black',
+				name: '1',
 			});
 
 			this.nodes.push({
-				id : 'black-box',
-				x  : 50,
-				y  : 0,
-				width  : 150,
-				height : 150,
-				color  : 'black'
+				id: 'player2',
+				x: 100,
+				y: 40,
+				width: 10,
+				height: 50,
+				color: 'black',
+				name:'2',
 			});
+			
+			this.nodes.push({
+				id: 'ball',
+				x: 70,
+				y: 40,
+				width: 5, 
+				height: 5, 
+				color: 'red',
+				name: 'B'
+			});
+			
+			
 		};
+		
 
 		app.onUpdate = function(time){
+			
 			this.getNode('black-box').y++;
+			
+			
 
 			if(Math.cos(this.timestamp / 100) > 0){
-				this.getNode('red-box').direction = -1;
+				this.getNode('red-box').direction = -6;
 			}else{
-				this.getNode('red-box').direction = 1;
+				this.getNode('red-box').direction = 12;
 			}
 
 			this.getNode('red-box').x+=this.getNode('red-box').direction;
